--- a/utilities/containers/gsg-encoder/cloudbuild.yaml
+++ b/utilities/containers/gsg-encoder/cloudbuild.yaml
@@ -2,7 +2,7 @@
  # Build the container image
  - name: 'gcr.io/cloud-builders/docker'
    args: ['build', '-t', 'gcr.io/$_PROJECT_ID/universal-sentence-encoder-app:$COMMIT_SHA', '.']
-   dir: gsg-encoder
+   #dir: gsg-encoder
  # Push the container image to Container Registry
  - name: 'gcr.io/cloud-builders/docker'
    args: ['push', 'gcr.io/$_PROJECT_ID/universal-sentence-encoder-app:$COMMIT_SHA']
